SAKIII-2363 Fix overflow problem in IE

--- a/dev/css/sakai/sakai.search_b.css
+++ b/dev/css/sakai/sakai.search_b.css
@@ -18,9 +18,9 @@
 .search_content_main .search_bar{width:auto;}
 .search_content_main .search_results{display:block;}
 .search_content_main .search_results_faceted{float:left;width:24%;}
-.search_content_main .search_results_container{padding:0;margin:0 0 10px;display:none;float:left;width:100%;}
+.search_content_main .search_results_container{padding:0;margin:0 0 10px;display:none;float:left;width:100%;overflow-y:hidden;}
 .search_content_main .search_results_container .s3d-highlight_area_background_tl,.search_content_main .search_results_container .s3d-highlight_area_background_tinner,.search_content_main .search_results_container .s3d-highlight_area_background_bl,.search_content_main .search_results_container .s3d-highlight_area_background_binner{margin-left:0;margin-right:0;}
-.search_content_main .search_results_container_sub{width:74%!important;}
+.search_content_main .search_results_container_sub{width:74%!important;overflow-y:hidden;}
 .search_result_title{text-align:left;margin:10px;font-weight:normal;font-size:1em;color:#828e9c;}
 .search_result_title strong,.search_result_title span{background-color:transparent;color:#828e9c;font-weight:bold;}
 
